# glia

./: .gitignore  CLAUDE.md  CODE_RULES.md  Cargo.toml  LICENSE  README.md  TODO.md  WORKFLOW.md
.claude/commands/: orient.md
.github/workflows/: wheels-py.yml
activation/: Cargo.toml
activation/benches/: ppr.rs
activation/src/: lib.rs
bench/: Cargo.toml
bench/latent/: Cargo.toml
bench/latent/examples/: perplexity_check.rs
bench/latent/exemplars/: index.jsonl  usage.jsonl
bench/lens/: Cargo.toml  README.md
bench/lens/cycle/: INTERRUPT_STATE.md  auto8h.sh  comprehensive_uplift_plan.md  cycle-0.3-failure-modes.jsonl  cycle-0.3-results.jsonl  cycle-0.7-failure-modes.jsonl  cycle-0.8-failure-modes.jsonl  cycle-0.8-failure-modes.md  cycle-0.8-results.jsonl  cycle-0.9-results.jsonl  cycle-1.0a-results.jsonl  cycle-3.7-50bench-results.jsonl  cycle_21_launch.sh  cycle_3_1_trimmed.sh  cycle_3_holdout_launch.sh  cycle_log.md  full_rust_injection_plan.md  lens_bias_smoke.sh  marshmallow_log.md  noticed_but_not_fixed.md  pending_ideas.md  results_history.jsonl  run_cycle.sh  run_cycle_loop.sh  run_smoke.sh  smoke-allfeat-results.jsonl  smoke-allfeat2-results.jsonl  smoke-phase1-results.jsonl  smoke-phase1-results.md
bench/lens/cycle/_backup_pre_relaunch/: cycle-4.0-final-shard0.jsonl  cycle-4.0-final-shard1.jsonl  cycle-4.0-final-shard2.jsonl  cycle-4.0-fullbench-shard0.jsonl  cycle-4.0-fullbench-shard1.jsonl  cycle-4.0-fullbench-shard2.jsonl  cycle-4.0-fullbench-shard3.jsonl  cycle-4.0-fullbench-shard4.jsonl  cycle-4.0-fullbench-shard5.jsonl  cycle-4.0-fullbench-shard6.jsonl  cycle-4.0-fullresume-shard0.jsonl  cycle-4.0-fullresume-shard1.jsonl  cycle-4.0-fullresume-shard2.jsonl  cycle-4.0-fullresume-shard3.jsonl  cycle-4.0-fullresume-shard4.jsonl  cycle-4.0-fullresume-shard5.jsonl  cycle-4.0-fullresume-shard6.jsonl  cycle-4.0-topup-shard0.jsonl  cycle-4.0-topup-shard1.jsonl  cycle-4.0-topup-shard2.jsonl
bench/lens/manifests/: holdout.json
bench/lens/scripts/: ablation_analyze.py  attention_analyze.py  channel_attribution.py  cross_cycle_compare.py  failure_mode_classifier.py  gold_patch_oracle.py  solution_curve.py
bench/lens/src/: lens.rs  lib.rs  main.rs  render_ascii.rs
bench/runpod/: mount.sh  pod_pull_and_setup.sh  setup.sh  sync_to_pod.sh
bench/tui-viewer/: Cargo.toml
bench/tui-viewer/src/: layout.rs  main.rs  panels.rs  state.rs  style.rs  tree.rs  watcher.rs
bench/tui-viewer/src/modes/: build.rs  flow.rs  mod.rs  ppr.rs
cli/: Cargo.toml
cli/src/: main.rs
code-domain/src/: lib.rs
core/src/: lib.rs
dev-notes/: audit-2026-06-10.md  cycle21_content_failure_analysis.md  cycle_35_36_final_report.md  cycle_4_0_pre_launch_report.md  eval-framework-coverage-2026-05-05.md  eval-substrate-2026-05-05-final.md  eval-substrate-2026-05-05-postfix.md  eval-substrate-2026-05-05.md  glia-build-plan.md  graph_regen_diff_plan.md  incremental_gmap_plan.md  issues_surfacing_now.md  neuropil_api_questions.md  next_tasks_substrate.md  readme-swebench-footnote.md
dev-notes/glia-memory/: project_040_vision.md  project_045_complete.md  project_repo_split_plan.md  project_workspace_layout.md  reference_rkyv_design.md
docs/: onboarding.md
engine/: Cargo.toml
engine/src/: cache.rs  lib.rs
engine/tests/: byte_identical.rs
engram-export/: Cargo.toml
engram-export/examples/: inspect.rs
engram-export/src/: lib.rs
graph/src/: lib.rs
graph/tests/: go_smoke_graph.rs  http_stack_smoke.rs  py_smoke_graph.rs  stack_resolvers.rs  ts_smoke_graph.rs
parsers/code/c_cpp/: Cargo.toml
parsers/code/c_cpp/src/: lib.rs
parsers/code/clojure/: Cargo.toml
parsers/code/clojure/src/: lib.rs
parsers/code/csharp/: Cargo.toml
parsers/code/csharp/src/: lib.rs
parsers/code/dart/: Cargo.toml
parsers/code/dart/src/: lib.rs
parsers/code/docs/: Cargo.toml
parsers/code/docs/src/: lib.rs
parsers/code/elixir/: Cargo.toml
parsers/code/elixir/src/: lib.rs
parsers/code/extractors/src/: angular.rs  config.rs  cron.rs  data_entities.rs  grpc.rs  iac.rs  lib.rs  packages.rs  queues.rs  react.rs  services.rs  ts_routes.rs  vue.rs
parsers/code/go/: Cargo.toml
parsers/code/go/src/: lib.rs
parsers/code/java/: Cargo.toml
parsers/code/java/src/: lib.rs
parsers/code/php/: Cargo.toml
parsers/code/php/src/: lib.rs
parsers/code/ruby/: Cargo.toml
parsers/code/rust/: Cargo.toml
parsers/code/scala/: Cargo.toml
parsers/code/solidity/: Cargo.toml
parsers/code/swift/: Cargo.toml
parsers/code/typescript/: Cargo.toml
projection-text/: Cargo.toml
projection-text/src/: composition.rs  driver_utils.rs  lib.rs  synth_callsite_argflow.rs
projection-text/src/passes/: context.rs  mod.rs  node_summaries.rs  pipeline.rs  traits.rs
projection-text/tests/: render_backend.rs
py/: Cargo.toml  pyproject.toml
py/src/: lib.rs
scratch/latent/examples/: hook_verify.rs  run_pathB.rs  run_prompt.rs  smoke.rs
scratch/latent/src/: forward_embeds.rs  lib.rs  qwen2_hacked.rs
scratch/lens/: Cargo.toml  README.md
scratch/lens/cycle/: INTERRUPT_STATE.md  auto8h.sh  comprehensive_uplift_plan.md  cycle-0.3-channel-attribution.jsonl  cycle-0.3-channel-attribution.md  cycle-0.3-failure-modes.md  cycle-0.7-channel-attribution.jsonl  cycle-0.7-channel-attribution.md  cycle-0.7-failure-modes.md  cycle-0.7-results.jsonl  cycle_21_launch.sh  cycle_3_holdout_launch.sh  cycle_log.md  full_rust_injection_plan.md  lens_bias_smoke.sh  marshmallow_log.md  noticed_but_not_fixed.md  results_history.jsonl  run_cycle.sh  run_cycle_loop.sh  run_smoke.sh
scratch/lens/manifests/: cycle_loop_set.json  working_set.json
scratch/lens/scripts/: channel_attribution.py  failure_mode_classifier.py  gold_patch_oracle.py  solution_curve.py
scratch/lens/src/: jsonl.rs  lens.rs  lib.rs  main.rs  render_png.rs  runtime.rs
scratch/runpod/: mount.sh  pod_pull_and_setup.sh  runpod.sh  setup.sh  sync_to_pod.sh
scripts/: eval_effect_classification.py  eval_framework_coverage.py  eval_substrate.py
store/: Cargo.toml
store/src/: lib.rs
store/tests/: roundtrip.rs  sharded.rs
(+9 files in other folders)
