[workspace]
resolver = "3"

# The SWE-bench / lens / latent harness lives in `bench/` (renamed from
# `scratch/` 2026-05-31) as its OWN cargo workspace — it consumes glia only as a
# built tool (shells out to `cargo run --bin synth_*` in projection-text), never
# as a library, so it's fully decoupled from the engine build. Excluded here so
# the engine workspace never descends into it.
#
# `engram-export` is likewise excluded: it's a publish=false side artifact whose
# only external dep is `engram-core` in the SIBLING `Engram` repo (path
# `../../Engram/...`), which doesn't exist in CI — leaving it in `members` breaks
# `cargo metadata` for the whole workspace and fails every wheel build. Nothing
# in the engine build depends on it; build it manually when Engram is checked out.
exclude = ["bench", "engram-export"]

members = [
    "core",
    "code-domain",
    "parsers/code/docs",
    "parsers/code/python",
    "parsers/code/go",
    "parsers/code/typescript",
    "graph",
    "store",
    "projection-text",
    "activation",
    "parsers/code/rust",
    "parsers/code/java",
    "parsers/code/csharp",
    "parsers/code/ruby",
    "parsers/code/php",
    "parsers/code/swift",
    "parsers/code/c_cpp",
    "parsers/code/scala",
    "parsers/code/clojure",
    "parsers/code/dart",
    "parsers/code/elixir",
    "parsers/code/solidity",
    "parsers/code/terraform",
    "parsers/code/react",
    "parsers/code/angular",
    "parsers/code/vue",
    "parsers/code/extractors",
    "engine",
    "py",
    "cli",
]
