[workspace]
resolver = "3"

# The SWE-bench / lens / latent harness lives in `bench/` (renamed from
# `scratch/` 2026-05-31) as its OWN cargo workspace — it consumes glia only as a
# built tool (shells out to `cargo run --bin synth_*` in projection-text), never
# as a library, so it's fully decoupled from the engine build. Excluded here so
# the engine workspace never descends into it.
#
# `engram-export` is excluded: the engram bridge depends on `engram-core` in the
# SIBLING `Engram` repo (path `../../Engram/...`), which only exists on a machine
# with Engram checked out next to glia — never in CI or a fresh clone. It's a
# publish=false side artifact and NOTHING in the engine workspace depends on it:
# the `export-engram` subcommand moved out of `cli` into engram-export's own
# `glia-export-engram` bin, so `cli` rejoins the workspace (CI-clean). Leaving
# engram-export in the workspace would break `cargo metadata` for everything and
# fail every wheel build. Run the exporter from `engram-export/` when Engram is
# present: `cargo run -p repo-graph-engram-export --bin glia-export-engram`.
exclude = ["bench", "engram-export"]

members = [
    "core",
    "code-domain",
    "parsers/code/docs",
    "parsers/code/python",
    "parsers/code/go",
    "parsers/code/typescript",
    "graph",
    "store",
    "projection-text",
    "activation",
    "parsers/code/rust",
    "parsers/code/java",
    "parsers/code/csharp",
    "parsers/code/ruby",
    "parsers/code/php",
    "parsers/code/swift",
    "parsers/code/c_cpp",
    "parsers/code/scala",
    "parsers/code/clojure",
    "parsers/code/dart",
    "parsers/code/elixir",
    "parsers/code/solidity",
    "parsers/code/terraform",
    "parsers/code/react",
    "parsers/code/angular",
    "parsers/code/vue",
    "parsers/code/extractors",
    "engine",
    "cli",
    "py",
]

# Single release version for the crates that must move in lockstep: the wheel
# (`py`) and the engine's parse-cache stamp (`engine/src/cache.rs`). Bumping the
# release happens HERE and nowhere else — a py-only bump used to leave the cache
# stamp frozen (audit 2026-06-10 #4), so old parses survived upgrades.
[workspace.package]
version = "0.4.17"
