[package]
name = "repo-graph-engine"
version = "0.4.13"
edition = "2024"
publish = false
description = "Pure-Rust orchestration: walk a repo, run language parsers + cross-cutting extractors, build per-lang graphs, merge, run cross-graph resolvers. Consumed by the pyo3 wrapper (`repo-graph-py`) and the `glia` CLI."

[dependencies]
repo-graph-core = { path = "../core" }
repo-graph-code-domain = { path = "../code-domain" }
repo-graph-graph = { path = "../graph" }
repo-graph-code-extractors = { path = "../parsers/code/extractors" }
repo-graph-parser-python = { path = "../parsers/code/python" }
repo-graph-parser-go = { path = "../parsers/code/go" }
repo-graph-parser-typescript = { path = "../parsers/code/typescript" }
repo-graph-parser-rust = { path = "../parsers/code/rust" }
repo-graph-parser-java = { path = "../parsers/code/java" }
repo-graph-parser-csharp = { path = "../parsers/code/csharp" }
repo-graph-parser-ruby = { path = "../parsers/code/ruby" }
repo-graph-parser-php = { path = "../parsers/code/php" }
repo-graph-parser-swift = { path = "../parsers/code/swift" }
repo-graph-parser-c-cpp = { path = "../parsers/code/c_cpp" }
repo-graph-parser-scala = { path = "../parsers/code/scala" }
repo-graph-parser-clojure = { path = "../parsers/code/clojure" }
repo-graph-parser-dart = { path = "../parsers/code/dart" }
repo-graph-parser-elixir = { path = "../parsers/code/elixir" }
repo-graph-parser-solidity = { path = "../parsers/code/solidity" }
repo-graph-parser-terraform = { path = "../parsers/code/terraform" }
repo-graph-parser-react = { path = "../parsers/code/react" }
repo-graph-parser-angular = { path = "../parsers/code/angular" }
repo-graph-parser-vue = { path = "../parsers/code/vue" }
