[package]
name = "repo-graph-engram-export"
version = "0.4.13"
edition = "2024"
publish = false
description = "Export a resolved glia MergedGraph as an engram_core::Gmap bincode file — engram's Path-A seed. Additional artifact; glia's native sharded .gmap is untouched."

[dependencies]
repo-graph-core = { path = "../core" }
repo-graph-code-domain = { path = "../code-domain" }
repo-graph-graph = { path = "../graph" }
# The ONLY thing glia and engram share. Path dep (sibling repos) keeps the
# contract structs + serde byte-identical on both sides — see module docs.
engram-core = { path = "../../Engram/crates/engram-core" }
bincode = "1.3"
serde_json = "1"
