[package]
name = "repo-graph-py"
version.workspace = true
edition = "2024"
publish = false
description = "Native Rust engine for mcp-repo-graph — parses, builds, and stores code graphs."
license-file = "../LICENSE"
repository = "https://github.com/James-Chahwan/glia"
readme = "README.md"

[lib]
name = "repo_graph_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py311"] }
repo-graph-core = { path = "../core" }
repo-graph-code-domain = { path = "../code-domain" }
repo-graph-graph = { path = "../graph" }
repo-graph-engine = { path = "../engine" }
repo-graph-projection-text = { path = "../projection-text" }
repo-graph-activation = { path = "../activation" }
repo-graph-store = { path = "../store" }
